// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reusable content transfomer should replace a reusable content block if the block is provided 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 7,
              "line": 2,
              "offset": 7,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 3,
            },
          },
          "type": "text",
          "value": "Test",
        },
      ],
      "data": Object {
        "hProperties": Object {
          "id": "test",
        },
        "id": "test",
      },
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 7,
          "line": 2,
          "offset": 7,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 6,
                  "line": 4,
                  "offset": 14,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 4,
                  "offset": 10,
                },
              },
              "type": "text",
              "value": "link",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 27,
              "line": 4,
              "offset": 35,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 9,
            },
          },
          "title": null,
          "type": "link",
          "url": "http://example.com",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 27,
          "line": 4,
          "offset": 35,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 9,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Position {
    "end": Object {
      "column": 1,
      "line": 6,
      "offset": 19,
    },
    "indent": Array [
      1,
      1,
    ],
    "start": Object {
      "column": 1,
      "line": 4,
      "offset": 9,
    },
  },
  "tag": "Test",
  "type": "reusable-content",
}
`;

exports[`reusable content transfomer should replace a reusable content block with multiple words if the block is provided 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 7,
              "line": 2,
              "offset": 7,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 3,
            },
          },
          "type": "text",
          "value": "Test",
        },
      ],
      "data": Object {
        "hProperties": Object {
          "id": "test",
        },
        "id": "test",
      },
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 7,
          "line": 2,
          "offset": 7,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 6,
                  "line": 4,
                  "offset": 14,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 4,
                  "offset": 10,
                },
              },
              "type": "text",
              "value": "link",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 27,
              "line": 4,
              "offset": 35,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 9,
            },
          },
          "title": null,
          "type": "link",
          "url": "http://example.com",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 27,
          "line": 4,
          "offset": 35,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 9,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Position {
    "end": Object {
      "column": 2,
      "line": 3,
      "offset": 24,
    },
    "indent": Array [
      1,
      1,
    ],
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "tag": "MyCustomComponent",
  "type": "reusable-content",
}
`;
